[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/mrJab.gd" type="Script" id=1]
[ext_resource path="res://Enemies/baseEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/SpikeParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/mrJabAnim.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Sounds/Other/Rock-Falling-1.Capanda.Team-7.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Attacks/Mr Jab falling.v1.Team 7.ilcapand.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 76, 38.5 )

[node name="enemy" instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )
mode = 3
particles = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( 0, -7.5 )
frames = ExtResource( 4 )
animation = "idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]
position = Vector2( 0, -2 )
polygon = PoolVector2Array( 0, -11, 3, 2, -3, 2 )

[node name="mapCollider" parent="." index="2"]
shape = null

[node name="collider" parent="startRange" index="0"]
position = Vector2( 0, -38.5 )
shape = SubResource( 4 )

[node name="collider" parent="stopRange" index="0"]
position = Vector2( 0, -38.5 )
shape = SubResource( 4 )

[node name="hitbox" parent="." index="5"]
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox" index="0"]
position = Vector2( 0, -2 )
polygon = PoolVector2Array( 0, -11, 3, 2, -3, 2 )

[node name="collider" parent="hitbox" index="1"]
shape = null

[node name="touchBox" type="Area2D" parent="." index="6" groups=["enemy"]]
visible = false
position = Vector2( 0, -0.5 )
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="touchBox" index="0"]
position = Vector2( 0, -2 )
polygon = PoolVector2Array( 0, -11, -1, -10, 1, -10 )

[node name="AimTimer" type="Timer" parent="." index="8"]
one_shot = true

[node name="AttackDelay" type="Timer" parent="." index="9"]
wait_time = 0.1
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="10"]
light_mask = 0
position = Vector2( 0, -6.5 )
scale = Vector2( 0.1, 0.55 )

[node name="losCast" type="Position2D" parent="." index="11"]
position = Vector2( 0, -3 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="." index="12"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="attack" type="AudioStreamPlayer2D" parent="." index="13"]
stream = ExtResource( 6 )

[connection signal="body_entered" from="touchBox" to="." method="_onTipHit"]
[connection signal="timeout" from="AimTimer" to="." method="_onAimEnd"]
[connection signal="timeout" from="AttackDelay" to="." method="_onTargetDelayEnd"]
